# serde_perl_dumper

./: Cargo.toml
src/: de.rs  error.rs  lib.rs  parser.rs  quote.rs  ser.rs
src/ser/: key.rs
