[package]
name = "serde_perl_dumper"
version = "0.1.0"
authors = ["Dylan Hardison <dylan@hardison.net>"]
description = "A Serde implementation for Perl data structures"
keywords = ["serde", "perl", "serialization"]
license = "MIT"
repository = "https://github.com/dylanwh/serde_perl"

edition = "2021"

[dependencies]
ariadne = "0.4.1"
itoa = "1.0.11"
nom = "7.1.3"
ryu = "1.0.18"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
